Examples/test-suite/errors/c_default_error.i
%module xxx

int foo(int x = 42 || 3);

